<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>testHelloWork</groupId>
  <artifactId>testHelloWork</artifactId>
  <version>0.0.1-SNAPSHOT</version>

<build>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.1</version>
            <configuration>
                <release>11</release>
                <fork>true</fork>
                <compilerArgs>
                    <arg>--add-modules</arg>
                    <arg>java.xml</arg>
                </compilerArgs>
            </configuration>
        </plugin>
    </plugins>
</build>


  <dependencies>
    <!-- Dépendance pour MongoDB -->
    <dependency>
      <groupId>org.mongodb</groupId>
      <artifactId>mongodb-driver-sync</artifactId>
      <version>4.9.0</version>
    </dependency>
  </dependencies>
</project>
